# voltaire

./: .depcheckrc  .dockerignore  .env.example  .gitignore  .gitmodules  .native-implementation-summary.md  .npmignore  .npmrc  .size-limit.json  ABI_DOCS_UPDATE_GUIDE.md  AGENTS.md  BATCH_1_MIGRATION_RESULTS.md  BATCH_2_MIGRATION_RESULTS.md  BENCHMARKING.md  BENCHMARK_RESULTS.md  BLOB_OX_MIGRATION.md  BRANDED_TYPES.md  BUG_FIX_PROGRESS.md  BUILD_SYSTEM_SUMMARY.md  BUILD_TARGETS.md  BUNDLE-SIZES.md  CHANGELOG.md  CLAUDE.md  CLIENT_IMPLEMENTATION_STATUS.md  CODEBASE_REVIEW.md  CODEBASE_STRUCTURE.md  COMPLETE_FFI_IMPLEMENTATION.md  COMPLETE_REFACTOR.md  CONTINUE_FFI_WORK.md  CONTRIBUTING.md  CRYPTO_DI_CONVERSION_COMPLETE.md  CRYPTO_DI_SUBAGENT_TEMPLATE.md  Cargo.toml  DEVTOOL-EVM-INTEGRATION.md  DOCUMENTATION_COMPLETION_PLAN.md  DOCUMENTATION_ENHANCEMENTS_SUMMARY.md  EIP1193_TEST_UPDATES.md  ETHEREUM_CLIENT_FEATURES_CHECKLIST.md  ETHERS_COMPARISON.md  EVENT_DECODING_CODE_EXAMPLES.ts  (+233 more)
.changeset/: config.json  docs-examples.md  docs-provider-fallback.md  effect-upgrade.md  enable-signers-abi.md  execution-plan-provider.md  fix-effect-dts.md  lint-and-types-cleanup.md  merkle-patricia-trie.md  privatekey-error-tests.md  redacted-schema-refactor.md  schema-annotations.md  tidy-pears-tease.md  type-soundness-fixes.md
.crush/: crush.db-shm  crush.db-wal
.docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.fuzz  Dockerfile.ubuntu  Dockerfile.ubuntu-test  docker-compose.fuzz.yml
.github/: pull_request_template.md
advanced_cpu_profiles/: ANALYSIS_REPORT.md
apps/: README.md
bench/: CLAUDE.md  PERFORMANCE_ANALYSIS.md  README.md  VALIDATION_REPORT.md  abi_compute_selector.zig  access_list_benchmark.zig  address_calculate_create.zig  address_calculate_create2.zig  address_equals.zig  address_from_bytes.zig  address_from_hex.zig  address_from_public_key.zig  address_from_u256.zig  address_get_create2.zig  address_is_valid.zig  address_is_zero.zig  address_to_checksum_hex.zig  address_to_hex.zig  address_to_u256.zig  basic_benchmark.zig  benchmarks.zig  blob_benchmark.zig  block_execution_bench.zig  block_gas_benchmark.zig  block_metadata_benchmark.zig  bn254_benchmark.zig  bn254_rust_benchmark.zig  bn254_zig_benchmark.zig  build.zig  code_analysis_benchmarks.zig  comprehensive_frame_benchmarks.zig  comprehensive_precompile_benchmark.zig  eip4844_benchmark.zig  eip4844_simple_benchmark.zig  evm_benchmark.zig  evm_benchmarks.zig  evm_benchmarks_simple.zig  evm_fixture_benchmarks.zig  evm_integration_benchmark.zig  extract_bytecode.sh  (+67 more)
bench/official/evms/evmone/: CMakeLists.txt  runner.cpp
bench/official/evms/evmone/cmake/: CPM.cmake
benchmark/: keccak256-loader.js  package-lock.json  package.json  run.js  size.js  speed.js  viem-entry.js  voltaire-entry.js  wasm-bundle-size.json
build_config/: artifacts.zig  benchmarks.zig  fuzzing.zig  modules.zig  rust.zig  tests.zig
build_utils/: asset_generator.zig  devtool.zig  rust_build.zig  tests.zig  typescript.zig  wasm.zig
bun_prototype/: MIGRATION_NOTES.md  README.md  package.json  tsconfig.json
comparisons/: BATCH_5_PLAN.md  COMPARISONS_INDEX.md  README.md
data/: README.md  build.zig
differential_traces/: README.md
docs/: CLAUDE.md  DOCUMENTATION.md  LIFETIMES.md  LLMS.txt  README.md  WASM-QUICK-START.md  ZIG_API.md  abi_encoding.md  astro.config.mjs  build.sh  cloud-benchmarks.md  comparisons.mdx  docs.json  ecdsa_implementation.md  eip_overrides.md  evmone-comparison.md  examples-navigation.json  fork-backend.md  forked_database_design.md  forked_database_design_v2.md  forked_storage_implementation.md  fuzzing.md  getting-started.mdx  globals.md  index.mdx  introduction.mdx  llms.txt  mcp.mdx  mint.json  model-context-protocol.mdx  package-lock.json  package.json  playground.mdx  primitives_completion_summary.md  profiling.md  stack-safety.md  storage_integration_patch.md  style.css  styles.css  transaction_building.md  (+3 more)
docs-swift/: docs.json  index.mdx
docs-zig/: CLAUDE.md  comparisons.mdx  docs.json  getting-started.mdx
examples/: README.md  abi.zig  abi_example.zig  abi_workflow.zig  address.zig  build.zig  client_usage.zig  eip191-eip1271-signatures.ts  eip191-eip712-usage.ts  eip4844_blob_transaction.zig  eip712.zig  eip7702_authorization.zig  hash_example.zig  hex.zig  hex_example.zig  keccak256.zig  numeric_example.zig  rlp.zig  rust_api_example.zig  secp256k1.zig  signature_recovery.zig  simple_abi_test.zig  simple_crypto_test.zig  test-examples.zig  trace-debugging.ts  transaction.zig
experimental/: analyze_ten_thousand.py  bytecode.py  loop_fusion_design.md
fixtures/: README.md
go_eth_types/: README.md  go.mod  hardfork.go  hardfork_test.go  logs.go  logs_test.go  opcode.go  opcode_test.go  transaction.go  transaction_test.go
infrastructure/: Makefile  (+1 more)
lib/revm/: .gitignore  Cargo.toml  cbindgen.toml  revm_wrapper.h
lib/revm/src/: lib.rs
sdks/rust/: .gitignore  Cargo.toml  PUBLISHING.md  README.md  build-all-platforms.sh  build.rs  bundle-macos-lib.sh  bundle-release.sh  bundle-static-lib.sh  wrapper.h
sdks/rust/src/: ffi.rs  lib.rs  stateful.rs  types.rs
sdks/rust/tests/: bytecode_execution_test.rs  full_integration_test.rs  integration_tests.rs
src/guillotine-py/: build.py  examples_comprehensive.py  minimal_repro.py  pyproject.toml  setup.py  test_basic.py  test_basic_ffi.py  test_working_api.py
src/guillotine-py/guillotine_evm/: __init__.py  _ffi.py  _ffi_build.py  bytecode.py  evm.py  exceptions.py  primitives.py  primitives_enhanced.py
src/guillotine-py/tests/: test_compilers.py  test_evm.py  test_primitives.py  test_primitives_comprehensive.py
src/revm_wrapper/: Cargo.toml  build.rs  revm.zig  revm_opcodes.txt  revm_opcodes_21_30.txt  revm_opcodes_31_40.txt  revm_opcodes_41_50.txt  revm_opcodes_51_60.txt  revm_opcodes_61_70.txt  revm_opcodes_71_80.txt  revm_wrapper.h  zig_opcodes.txt  zig_opcodes_21_30.txt  zig_opcodes_31_40.txt  zig_opcodes_41_50.txt  zig_opcodes_51_60.txt  zig_opcodes_61_70.txt  zig_opcodes_71_80.txt
src/revm_wrapper/src/: lib.rs  trace_test.rs
(+25012 files in other folders)
