[workspace]
resolver = "2"
members = ["lib/ark", "lib/keccak"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Arkworks dependencies for elliptic curve operations
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-bls12-381 = "0.5.0"
# Keccak assembly-optimized implementation
keccak-asm = "0.1.4"

[profile.release]
# Optimize for size by default
opt-level = "z"
lto = false  # Disabled for faster compilation
panic = "abort"

[profile.release-fast]
# Optimize for speed
inherits = "release"
opt-level = 3
lto = false  # Disabled for faster compilation
panic = "abort"
