# We don't publish a rust package at this time in favor of using
# Alloy for rust
# This Cargo.toml is only used for internal rust crypto dependencies
[package]
name = "voltaire"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_wrappers"
crate-type = ["staticlib"]
path = "src/crypto/lib.rs"

[dependencies]
# Arkworks dependencies for elliptic curve operations
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-bls12-381 = "0.5.0"
# Keccak implementations - assembly-optimized for native, pure Rust for WASM
keccak-asm = { version = "0.1.4", optional = true }
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }

[features]
default = ["asm"]
asm = ["keccak-asm"]
portable = ["tiny-keccak"]

[profile.dev]
panic = "abort"

[profile.release]
# Optimize for size by default
opt-level = "z"
lto = true  
panic = "abort"

[profile.release-fast]
# Optimize for speed
inherits = "release"
opt-level = 3
lto = true  
panic = "abort"
