[package]
name = "revm_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
revm = { workspace = true }
serde_json = "1.0"
revm-primitives = { workspace = true }
alloy-primitives = { workspace = true }
libc = "0.2"
hex = "0.4"
# High-performance assembly-optimized KECCAK256
keccak-asm = "0.1"
# BLS12-381 support shared with bn254_wrapper
ark-bls12-381 = { workspace = true }

[build-dependencies]
cbindgen = "0.24"

[profile.release]
panic = "abort"
lto = false
codegen-units = 16

[profile.bench]
panic = "abort"
lto = false
codegen-units = 16

# [[bin]]
# name = "verify_lt_order"
# path = "src/bin/verify_lt_order.rs"

# [[bin]]
# name = "verify_sub_order"
# path = "src/bin/verify_sub_order.rs"

# [[bin]]
# name = "verify_div_order"
# path = "src/bin/verify_div_order.rs"

# [[bin]]
# name = "verify_exp_order"
# path = "src/bin/verify_exp_order.rs"