[package]
name = "guillotine-rs"
version = "0.1.0"
edition = "2021"
authors = ["Guillotine Contributors"]
description = "Safe Rust bindings for the Guillotine EVM - a high-performance Ethereum Virtual Machine implementation written in Zig"
documentation = "https://docs.rs/guillotine-rs"
repository = "https://github.com/evmts/guillotine"
homepage = "https://github.com/evmts/guillotine"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ethereum", "evm", "blockchain", "ffi", "zig"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
include = [
    "src/**/*",
    "build.rs",
    "wrapper.h",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[package.metadata.docs.rs]
# Enable all features when building docs on docs.rs
all-features = true
# Build docs for the target that docs.rs uses
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
alloy-primitives = "0.8"
hex = "0.4"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
revm = { version = "14.0", features = ["c-kzg", "blst"] }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[features]
default = []
# Enable tracing support for debugging EVM execution
tracing = []
# Build with optimizations for benchmarking
bench = []

# Hardfork selection features (mutually exclusive)
hardfork-frontier = []
hardfork-homestead = []
hardfork-byzantium = []
hardfork-berlin = []
hardfork-london = []
hardfork-shanghai = []
hardfork-cancun = []

# Optimization strategy features (mutually exclusive)
optimize-fast = []
optimize-small = []
optimize-safe = []

# Configuration features
max-call-depth-256 = []
max-call-depth-512 = []
max-call-depth-2048 = []
stack-size-256 = []
stack-size-512 = []
stack-size-2048 = []

# Input size configuration
max-input-size-64kb = []    # 65536 bytes
max-input-size-256kb = []   # 262143 bytes (max u18)
max-input-size-1mb = []     # 1048576 bytes

# Bytecode size configuration
max-bytecode-size-12kb = []  # 12288 bytes
max-bytecode-size-48kb = []  # 49152 bytes
max-bytecode-size-100kb = [] # 102400 bytes

# Init code size configuration
max-initcode-size-24kb = []  # 24576 bytes
max-initcode-size-96kb = []  # 98304 bytes
max-initcode-size-200kb = [] # 204800 bytes

# Memory configuration
memory-initial-capacity-2kb = []  # 2048 bytes
memory-initial-capacity-8kb = []  # 8192 bytes
memory-initial-capacity-16kb = [] # 16384 bytes
large-memory-limit = []
small-memory-limit = []

# Arena configuration
large-arena = []
small-arena = []
arena-growth-125 = []        # 25% growth (125)
arena-growth-200 = []        # 100% growth (200)

# Block configuration
block-gas-limit-8m = []      # 8,000,000
block-gas-limit-15m = []     # 15,000,000
block-gas-limit-50m = []     # 50,000,000

# SIMD configuration
vector-length-1 = []         # Disable SIMD (scalar operations)
vector-length-4 = []         # Force 4-element SIMD
vector-length-8 = []         # Force 8-element SIMD
vector-length-16 = []        # Force 16-element SIMD

# Safety configuration
disable-loop-quota = []      # Disable infinite loop protection
loop-quota-100k = []         # 100,000 instruction limit
loop-quota-10m = []          # 10,000,000 instruction limit

# Feature flags (separate enable/disable for clarity)
enable-fusion = []           # Explicitly enable fusion (default on)
disable-fusion = []          # Disable fusion optimizations
enable-precompiles = []      # Explicitly enable precompiles (default on)
disable-precompiles = []     # Disable precompiled contracts
disable-gas-checks = []      # Disable gas accounting (testing only)
disable-balance-checks = []  # Disable balance checks (testing only)

[[bench]]
name = "evm_comparison"
harness = false
required-features = ["bench"]

[lib]
name = "guillotine_ffi"
crate-type = ["cdylib", "rlib"]

[badges]
maintenance = { status = "actively-developed" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies can go here if needed

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies can go here if needed