[build-system]
requires = ["setuptools>=64", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guillotine-evm"
version = "0.1.0"
description = "Python bindings for Guillotine EVM - A high-performance Ethereum Virtual Machine implementation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EVMts Contributors", email = "noreply@evmts.dev"}
]
keywords = ["ethereum", "evm", "blockchain", "smart-contracts", "virtual-machine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/evmts/guillotine"
Documentation = "https://github.com/evmts/guillotine/tree/main/src/guillotine-py"
Repository = "https://github.com/evmts/guillotine"
Issues = "https://github.com/evmts/guillotine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["guillotine_evm*"]

[tool.setuptools.package-data]
guillotine_evm = ["*.so", "*.dll", "*.dylib", "py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607", "PLR0913", "PLR0912", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=guillotine_evm --cov-report=term-missing"