[package]
name = "revm_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
revm = { version = "14.0", features = ["c-kzg", "blst", "std", "serde", "serde-json", "dev"] }
serde_json = "1.0"
revm-primitives = "10.0"
alloy-primitives = "0.8"
libc = "0.2"
hex = "0.4"

[build-dependencies]
cbindgen = "0.24"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
panic = "abort"
lto = true
codegen-units = 1