[package]
name = "revm_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
revm = { workspace = true }
serde_json = "1.0"
revm-primitives = { workspace = true }
alloy-primitives = { workspace = true }
libc = "0.2"
hex = "0.4"

[build-dependencies]
cbindgen = "0.24"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
panic = "abort"
lto = true
codegen-units = 1